[gd_scene load_steps=2 format=3 uid="uid://boony3y1rqxqe"]

[ext_resource type="Script" uid="uid://c5v0w75tww40" path="res://scripts/ui/hud.gd" id="1_nt7q6"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nt7q6")

[node name="PingLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -224.0
offset_bottom = 32.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 32
text = "Ping:"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -706.0
grow_horizontal = 2
grow_vertical = 2

[node name="HPLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "HP:"

[node name="XVelLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "X-Vel:"

[node name="YVelLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Y-Vel:"

[node name="AmmoLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Y-Vel:"

[node name="JumpsLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Jumps:"

[node name="PingTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="PingTimer" to="." method="_on_ping_timer_timeout"]
